QAbstractOpenGLFunctions: disallow copy/assignment operations

QAbstractOpenGLFunctions must not be copied but the copy and assignment
operators were not marked as deleted.
Add Q_DISABLE_COPY to prevent an accidentally copy.

Fixes: QTBUG-71422
Change-Id: I5fa508bc76a4142a4404d3529720e717b7f7fd41
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Niels Dekker
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>